test_compile_errors/src/compile-fail/v_arg_num.stderr
error: unexpected end of macro invocation
 --> $DIR/v_arg_num.rs:7:5
  |
7 |     infov!();
  |     ^^^^^^^^ missing tokens in macro arguments

error: no rules expected the token `4`
  --> $DIR/v_arg_num.rs:11:34
   |
11 |     infov!("prefix", "{}", true, 4);
   |                                  ^ no rules expected this token in macro call
